{
    "name": "InputAction",
    "maps": [
        {
            "name": "MainTitle",
            "id": "ddf8cc65-f1e2-4a31-ae2c-15762f47a9f2",
            "actions": [],
            "bindings": []
        },
        {
            "name": "OutsideWorld",
            "id": "15705f2c-11f5-4c8d-b352-5b2d1d2784d6",
            "actions": [
                {
                    "name": "StartClimbing",
                    "type": "Button",
                    "id": "a1b2c3d4-e5f6-7890-abcd-ef1234567890",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EnterInsideWorld",
                    "type": "Button",
                    "id": "b58cadc7-9edd-4010-9181-a02a4af2f604",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1a2b3c4d-5e6f-7890-abcd-ef1234567890",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartClimbing",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0e8c9b2d-6924-4aa7-924f-859253270527",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnterInsideWorld",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "InsideWorld",
            "id": "cadc1420-5f68-480e-8558-b141ee6a3798",
            "actions": [
                {
                    "name": "StartSailing",
                    "type": "Button",
                    "id": "2b3c4d5e-6f78-9012-bcde-f23456789012",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EnterOutsideWorld",
                    "type": "Button",
                    "id": "5e707bc7-fc5e-4d60-a54e-35a1824e6ea9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveBoat",
                    "type": "Value",
                    "id": "3104855c-16a9-4bd3-a454-c696e2711561",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3c4d5e6f-7890-1234-cdef-456789012345",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartSailing",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d870ba0b-aa07-45d8-9bc2-9b33fc3f2b93",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnterOutsideWorld",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "71e6fee6-2af2-4cd1-b4cd-10e7d0db1d2b",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveBoat",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "0c2ff8dd-e95c-4f45-977b-b22f729f7cd1",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveBoat",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "256431e2-489a-48aa-9685-80a7ba508603",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveBoat",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4f84c67d-754a-42dc-93bf-001f1345e9e3",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveBoat",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "182e64c4-0dc0-497a-b8f3-adf5e7f00a40",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveBoat",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "BoatSailing",
            "id": "3ce2e5bd-0aab-4e73-9eaa-afc404d6c1de",
            "actions": [
                {
                    "name": "MoveBoat",
                    "type": "Value",
                    "id": "4d5e6f78-9012-3456-def7-890123456789",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "EnterOutsideWorld",
                    "type": "Button",
                    "id": "682c37bf-6735-485c-88c3-1dbc3a2a43dc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "5e6f7890-1234-5678-ef90-123456789012",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveBoat",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "6f789012-3456-7890-f012-345678901234",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveBoat",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "78901234-5678-9012-0123-456789012345",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveBoat",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "89012345-6789-0123-1234-567890123456",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveBoat",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "90123456-7890-1234-2345-678901234567",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveBoat",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "84394469-ab68-4704-969e-fdafe8ca4be6",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnterOutsideWorld",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "BoatInteraction",
            "id": "d6757167-155e-46ca-96ed-0e846741dc0b",
            "actions": [
                {
                    "name": "StartSailing",
                    "type": "Button",
                    "id": "07aa657c-c9f8-4fac-91b6-ae05969b401b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EnterOutsideWorld",
                    "type": "Button",
                    "id": "01234567-89ab-cdef-0123-456789abcdef",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a109c8ab-b504-4602-8f1c-d0193375a1d1",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartSailing",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "12345678-9abc-def0-1234-56789abcdef0",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EnterOutsideWorld",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ThoughtVessel",
            "id": "5aefaa3d-f039-4b43-b722-7696f329c9f9",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "f64b607e-8f69-49c7-b7e2-bca7ce310df9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1ce54564-4423-491c-85b2-a1b77c7406d0",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}